<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Server_Telesigna_Form</class>
 <widget class="QDialog" name="Server_Telesigna_Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>259</width>
    <height>166</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <layout class="QVBoxLayout" name="verticalLayout_3">
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QLabel" name="lab_addr">
           <property name="text">
            <string>遥信地址</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="lab_clientID">
           <property name="text">
            <string>对应客户端ID</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="lab_clientTA">
           <property name="text">
            <string>对应客户端遥信ID</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QLabel" name="lab_describe">
           <property name="text">
            <string>描述</string>
           </property>
          </widget>
         </item>
        </layout>
       </item>
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
          <widget class="QLineEdit" name="lineEdit_addr"/>
         </item>
         <item>
          <widget class="QLineEdit" name="lineEdit_clientID"/>
         </item>
         <item>
          <widget class="QLineEdit" name="lineEdit_clientTA"/>
         </item>
         <item>
          <widget class="QLineEdit" name="lineEdit_describe"/>
         </item>
        </layout>
       </item>
      </layout>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QPushButton" name="btn_ok">
         <property name="text">
          <string>确定</string>
         </property>
        </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
           <width>40</width>
           <height>20</height>
          </size>
         </property>
        </spacer>
       </item>
       <item>
        <widget class="QPushButton" name="btn_cancel">
         <property name="text">
          <string>取消</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
